source/task.css
/* Styles for Task list */

/*
 * Section for the task container
 */
#main-container {
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  max-width: 75%;
  max-height: 100%;
  margin: 0 auto;
  padding: 10px;
}

/*
 * Section for the task item in list
 */
.taskNode {
  display: flex;
  align-items: center;
  background: white !important;
  
  margin: 0.5rem;
  padding: 0;
  min-width: 100%;
  height: 4rem;
  font-size: 1.5rem;
  
  border: 1px solid rgba(46, 71, 86, 0.075);
  border-radius: 10px;
  transition: all 0.5s ease;
}

/* Section for drag button */
.drag-btn {
  
  margin-right: 5%;
  margin-left: -1em;
  text-align: center;
  line-height: inherit;
  
  /* background-color: rgba(46, 71, 86, 0.075); */
  background-color: transparent;
  border-radius: 10px;
}

/*
 * Section for the checkbox in task item
 */
.form-check-input[type="checkbox"] {
  color: #e5e5e5;
  border-radius: 50% !important;
  display: inline-block;
  margin-left: 5%;
  position: inline-block;
  width: 1.3em;
  height: 1.3em;
  border-color: #e5e5e5;
}

.form-check-input[type="checkbox"]:checked {
  background-color: #2e4756;
  border-color: #2e4756;
}
.form-check-input[type="checkbox"]:focus {
  border-color: #e5e5e5;
  box-shadow: 0 0 0 0.2rem rgba(46, 71, 86, 0.3);
}

/*
 * Section for the text of task in task item
 */
p.task-item {
  margin: 0;
  white-space: nowrap;
  word-break: break-all;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* Section for progress-bar */
.progress {
  width: 25% !important;
  margin-left: 5%;
  margin-right: 5%;
}

.progress-bar {
  /* width: 25% !important; */
  background-color: rgba(46, 71, 86, 0.75) !important;
}

/* Section for dropdown menu */
.dropright {
  background-color: #00000000;
}
.dropdown-toggle::after {
  display: none !important;
}
#dropdownMenuButton {
  background-color: #00000000;
  color: rgba(46, 71, 86);
  border: none;
}
#dropdownMenuButton:focus {
  box-shadow: none;
}


/* For material icon adjustment */
.material-icons {
  font-size: 48px !important;
  font-weight: bold;
}

button {
  border: none;
  background: #00000000;
  
}

.hide,  :host(.hide){
  visibility: hidden !important;
  border: none;
  /* background:none; */
  opacity: 0;
  transition: opacity 0.75s ease;
}

:host(:hover) .hide {
  opacity: 1;
  visibility:visible  !important;
}   

.taskNode:hover .hide {
  opacity: 1;
  visibility:visible  !important;
}   

.btn{
  padding-left: 0% !important;
  padding-right: 0% !important;
}
.play-btn{
  color: #2e4756;
  border: none;
  cursor: pointer;
  padding-top: 3px;
  padding-bottom:0%;
  text-shadow: none;
  box-shadow: none;
}

.btn:focus, .btn:active {
  box-shadow: none !important;
}

